syntax = "proto3";

option go_package = "stream/serverStream/echo";

package serverEcho;


// Echo 服务，包含了4种类型API
service Echo {
  // SServerStreaming
  rpc ServerStreamingEcho(EchoRequest) returns (stream EchoResponse) {}
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}